sourse/с, с++/Формальные грамматики и теория компиляторов/curse_FG/grammar.output
State 1 conflicts: 1 shift/reduce
State 2 conflicts: 1 shift/reduce, 9 reduce/reduce
State 6 conflicts: 2 shift/reduce
State 7 conflicts: 2 shift/reduce
State 8 conflicts: 1 shift/reduce
State 9 conflicts: 1 shift/reduce
State 10 conflicts: 1 shift/reduce
State 11 conflicts: 1 shift/reduce
State 12 conflicts: 1 shift/reduce
State 13 conflicts: 1 shift/reduce
State 14 conflicts: 1 shift/reduce
State 15 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 17 conflicts: 1 shift/reduce
State 18 conflicts: 1 shift/reduce
State 19 conflicts: 1 shift/reduce
State 20 conflicts: 1 shift/reduce
State 29 conflicts: 3 shift/reduce
State 34 conflicts: 1 shift/reduce
State 36 conflicts: 1 shift/reduce, 9 reduce/reduce
State 37 conflicts: 1 shift/reduce
State 38 conflicts: 2 shift/reduce
State 40 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 64 conflicts: 9 reduce/reduce
State 75 conflicts: 1 shift/reduce
State 76 conflicts: 3 reduce/reduce
State 77 conflicts: 3 shift/reduce
State 80 conflicts: 3 shift/reduce
State 85 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce
State 93 conflicts: 1 shift/reduce
State 103 conflicts: 3 shift/reduce
State 113 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce, 4 reduce/reduce
State 125 conflicts: 2 shift/reduce
State 130 conflicts: 3 shift/reduce
State 142 conflicts: 1 shift/reduce
State 146 conflicts: 3 shift/reduce
State 151 conflicts: 1 shift/reduce
State 157 conflicts: 3 shift/reduce
State 161 conflicts: 1 shift/reduce
State 168 conflicts: 38 reduce/reduce
State 169 conflicts: 1 shift/reduce
State 170 conflicts: 3 reduce/reduce
State 205 conflicts: 37 reduce/reduce
State 206 conflicts: 2 shift/reduce, 3 reduce/reduce
State 219 conflicts: 3 shift/reduce
State 229 conflicts: 4 reduce/reduce
State 233 conflicts: 1 shift/reduce
State 246 conflicts: 1 shift/reduce
State 248 conflicts: 4 reduce/reduce
State 249 conflicts: 3 shift/reduce
State 258 conflicts: 1 shift/reduce
State 261 conflicts: 3 shift/reduce
State 263 conflicts: 2 shift/reduce
State 264 conflicts: 3 shift/reduce
State 272 conflicts: 3 shift/reduce, 1 reduce/reduce
State 328 conflicts: 1 shift/reduce
State 331 conflicts: 1 shift/reduce
State 336 conflicts: 1 shift/reduce
State 338 conflicts: 1 shift/reduce
State 339 conflicts: 1 shift/reduce
State 345 conflicts: 1 shift/reduce
State 346 conflicts: 1 shift/reduce
State 347 conflicts: 1 shift/reduce, 3 reduce/reduce
State 357 conflicts: 2 reduce/reduce
State 359 conflicts: 2 reduce/reduce
State 366 conflicts: 1 shift/reduce
State 407 conflicts: 2 shift/reduce
State 416 conflicts: 2 shift/reduce, 3 reduce/reduce
State 420 conflicts: 3 shift/reduce, 1 reduce/reduce
State 425 conflicts: 1 shift/reduce
State 426 conflicts: 1 shift/reduce
State 427 conflicts: 1 shift/reduce
State 453 conflicts: 1 reduce/reduce
State 458 conflicts: 1 shift/reduce
State 460 conflicts: 1 shift/reduce
State 464 conflicts: 2 shift/reduce
State 468 conflicts: 1 shift/reduce
State 479 conflicts: 1 shift/reduce
State 482 conflicts: 1 shift/reduce
State 503 conflicts: 43 shift/reduce


Grammar

    0 $accept: program $end

    1 program: function_definition
    2        | main_function
    3        | struct_declaration
    4        | union_declaration
    5        | enum_declaration
    6        | declaration semicolons
    7        | union_variable_declaration semicolons
    8        | program function_definition
    9        | program main_function
   10        | program struct_declaration
   11        | program union_declaration
   12        | program enum_declaration
   13        | program declaration semicolons
   14        | program union_variable_declaration semicolons

   15 function_definition: type IDENTIFIER LPAREN parameter_list RPAREN compound_statement
   16                    | type point IDENTIFIER LPAREN parameter_list RPAREN compound_statement
   17                    | type IDENTIFIER LPAREN parameter_list RPAREN semicolons
   18                    | type IDENTIFIER LPAREN RPAREN semicolons
   19                    | type declarator compound_statement
   20                    | type declarator semicolons

   21 point: MULTIPLY
   22      | point point

   23 main_function: type IDENTIFIER LPAREN RPAREN compound_statement

   24 struct_declaration: STRUCT IDENTIFIER SEMICOLON
   25                   | STRUCT IDENTIFIER LBRACE struct_member_list RBRACE semicolons
   26                   | STRUCT IDENTIFIER LBRACE struct_member_list RBRACE IDENTIFIER semicolons

   27 union_declaration: UNION IDENTIFIER LBRACE struct_member_list RBRACE semicolons
   28                  | UNION IDENTIFIER LBRACE struct_member_list RBRACE IDENTIFIER semicolons
   29                  | UNION LBRACE struct_member_list RBRACE semicolons
   30                  | UNION LBRACE struct_member_list RBRACE IDENTIFIER semicolons

   31 union_variable_declaration: UNION IDENTIFIER union_declarator_list

   32 union_declarator_list: union_declarator
   33                      | union_declarator_list COMMA union_declarator

   34 union_declarator: IDENTIFIER
   35                 | MULTIPLY IDENTIFIER
   36                 | MULTIPLY MULTIPLY IDENTIFIER

   37 enum_declaration: ENUM IDENTIFIER LBRACE enum_list_nonempty RBRACE semicolons
   38                 | ENUM IDENTIFIER LBRACE enum_list_nonempty RBRACE IDENTIFIER semicolons
   39                 | ENUM LBRACE enum_list_nonempty RBRACE semicolons
   40                 | ENUM LBRACE enum_list_nonempty RBRACE IDENTIFIER semicolons

   41 enum_list_nonempty: enum_item
   42                   | enum_list_nonempty COMMA enum_item

   43 enum_item: IDENTIFIER
   44          | IDENTIFIER ASSIGN constant_expression

   45 struct_member_list: struct_member
   46                   | struct_member struct_member_list

   47 struct_member: type declarator semicolons
   48              | type init_declarator_list semicolons
   49              | type bitfield_list semicolons
   50              | struct_declaration
   51              | union_declaration

   52 bitfield_list: bitfield_with_decl
   53              | bitfield_list COMMA bitfield_with_decl
   54              | bitfield_without_decl
   55              | bitfield_list COMMA bitfield_without_decl

   56 bitfield_with_decl: declarator COLON constant_expression

   57 bitfield_without_decl: COLON constant_expression

   58 type: cast_type
   59     | STATIC type
   60     | type TYPE

   61 cast_type: TYPE
   62          | TYPE pointer
   63          | TYPE pointer_opt
   64          | STRUCT IDENTIFIER pointer_opt
   65          | UNION IDENTIFIER pointer_opt
   66          | ENUM IDENTIFIER pointer_opt
   67          | IDENTIFIER pointer_opt
   68          | LONG TYPE pointer_opt
   69          | SHORT TYPE pointer_opt
   70          | FILE_TYPE pointer_opt
   71          | LONG pointer_opt
   72          | SHORT pointer_opt
   73          | UNSIGNED opt_type pointer_opt
   74          | SIGNED opt_type pointer_opt
   75          | LONG_LONG pointer_opt
   76          | UNSIGNED_LONG_LONG pointer_opt
   77          | SIGNED_LONG_LONG pointer_opt
   78          | UNSIGNED_SHORT pointer_opt
   79          | SIGNED_SHORT pointer_opt
   80          | UNSIGNED_LONG pointer_opt
   81          | SIGNED_LONG pointer_opt
   82          | UNSIGNED_TYPE pointer_opt
   83          | SIGNED_TYPE pointer_opt
   84          | LONG_DOUBLE pointer_opt
   85          | STATIC cast_type

   86 opt_type: ε
   87         | TYPE

   88 pointer_opt: ε
   89            | pointer

   90 pointer: MULTIPLY
   91        | pointer pointer

   92 amper: AMPERSAND
   93      | AMPERSAND amper

   94 parameter_list: parameter_list COMMA parameter_declaration
   95               | parameter_declaration

   96 parameter_declaration: type declarator
   97                      | type abstract_declarator
   98                      | type
   99                      | type amper declarator
  100                      | type amper abstract_declarator

  101 abstract_declarator: pointer
  102                    | pointer direct_abstract_declarator
  103                    | direct_abstract_declarator
  104                    | amper direct_abstract_declarator

  105 direct_abstract_declarator: LPAREN abstract_declarator RPAREN
  106                           | LBRACKET RBRACKET
  107                           | LBRACKET constant_expression RBRACKET
  108                           | direct_abstract_declarator LBRACKET RBRACKET
  109                           | direct_abstract_declarator LBRACKET constant_expression RBRACKET
  110                           | LPAREN RPAREN
  111                           | LPAREN parameter_list RPAREN
  112                           | direct_abstract_declarator LPAREN RPAREN
  113                           | direct_abstract_declarator LPAREN parameter_list RPAREN

  114 compound_statement: LBRACE statement_list RBRACE

  115 statement_list: statement
  116               | statement_list statement

  117 statement: IDENTIFIER COLON statement
  118          | compound_statement
  119          | if_statement
  120          | while_statement
  121          | for_statement
  122          | switch_statement
  123          | do_while_statement
  124          | statements semicolons
  125          | struct_declaration
  126          | union_declaration
  127          | enum_declaration
  128          | union_variable_declaration semicolons
  129          | semicolons

  130 statements: declaration
  131           | expression
  132           | RETURN expression
  133           | RETURN LPAREN IDENTIFIER RPAREN
  134           | RETURN
  135           | BREAK
  136           | error

  137 do_while_statement: DO statement1 WHILE LPAREN op_exp RPAREN semicolons

  138 switch_statement: SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE

  139 case_list: ε
  140          | case_list case_statement
  141          | case_statement

  142 case_statement: CASE constant COLON statement_list1
  143               | CASE IDENTIFIER COLON statement_list1
  144               | DEFAULT COLON statement_list

  145 statement_list1: ε
  146                | statement
  147                | statement_list statement

  148 declaration: type init_declarator_list

  149 init_declarator_list: init_declarator
  150                     | init_declarator_list COMMA init_declarator

  151 init_declarator: declarator
  152                | point declarator
  153                | declarator ASSIGN initializer

  154 declarator: direct_declarator
  155           | pointer_opt direct_declarator
  156           | amper direct_declarator

  157 direct_declarator: IDENTIFIER
  158                  | point IDENTIFIER
  159                  | LPAREN declarator RPAREN
  160                  | direct_declarator LBRACKET RBRACKET
  161                  | direct_declarator LBRACKET constant_expression RBRACKET
  162                  | direct_declarator LPAREN RPAREN
  163                  | direct_declarator LPAREN parameter_list RPAREN

  164 constant_expression: conditional_expression

  165 designator: DOT IDENTIFIER
  166           | LBRACKET constant_expression RBRACKET

  167 designator_list: designator
  168                | designator_list designator

  169 initializer: assignment_expression
  170            | FLOAT
  171            | STRING
  172            | LBRACE initializer_list RBRACE
  173            | LBRACE initializer_list COMMA RBRACE

  174 initializer_list: ε
  175                 | initializer
  176                 | initializer_list COMMA initializer
  177                 | designator_list ASSIGN initializer
  178                 | initializer_list COMMA designator_list ASSIGN initializer

  179 expression: assignment_expression
  180           | primary_expression
  181           | expression COMMA assignment_expression

  182 assignment_expression: conditional_expression
  183                      | unary_expression ASSIGN assignment_expression
  184                      | unary_expression PLUS_ASSIGN assignment_expression
  185                      | unary_expression MINUS_ASSIGN assignment_expression
  186                      | unary_expression MULTIPLY_ASSIGN assignment_expression
  187                      | unary_expression DIVIDE_ASSIGN assignment_expression
  188                      | unary_expression MODULO_ASSIGN assignment_expression
  189                      | unary_expression LEFT_SHIFT_ASSIGN assignment_expression
  190                      | unary_expression RIGHT_SHIFT_ASSIGN assignment_expression

  191 conditional_expression: logical_or_expression

  192 logical_or_expression: inclusive_or_expression
  193                      | logical_or_expression OR logical_or_expression
  194                      | logical_or_expression AND logical_or_expression

  195 inclusive_or_expression: exclusive_or_expression
  196                        | inclusive_or_expression PIPE exclusive_or_expression
  197                        | exclusive_or_expression CARET and_expression
  198                        | and_expression AMPERSAND and_expression

  199 exclusive_or_expression: and_expression

  200 and_expression: relational_expression
  201               | and_expression EQUAL relational_expression
  202               | and_expression NEQUAL relational_expression

  203 relational_expression: shift_expression
  204                      | relational_expression LESS shift_expression
  205                      | relational_expression GREATER shift_expression
  206                      | relational_expression LE_OP shift_expression
  207                      | relational_expression GE_OP shift_expression

  208 shift_expression: additive_expression
  209                 | shift_expression LEFT_SHIFT additive_expression
  210                 | shift_expression RIGHT_SHIFT additive_expression

  211 additive_expression: multiplicative_expression
  212                    | additive_expression PLUS multiplicative_expression
  213                    | additive_expression MINUS multiplicative_expression

  214 multiplicative_expression: cast_expression
  215                          | multiplicative_expression MULTIPLY cast_expression
  216                          | multiplicative_expression DIVIDE cast_expression
  217                          | multiplicative_expression MODULO cast_expression

  218 cast_expression: unary_expression
  219                | LPAREN cast_type RPAREN cast_expression

  220 unary_expression: postfix_expression
  221                 | unary_operator unary_expression
  222                 | SIZEOF unary_expression
  223                 | SIZEOF LPAREN type RPAREN

  224 unary_operator: PLUS
  225               | MINUS
  226               | NOT
  227               | AMPERSAND
  228               | MULTIPLY
  229               | INCREMENT
  230               | DECREMENT

  231 function_call: IDENTIFIER LPAREN argument_list RPAREN

  232 postfix_expression: primary_expression
  233                   | postfix_expression LBRACKET expression RBRACKET
  234                   | postfix_expression LPAREN argument_list RPAREN
  235                   | postfix_expression DOT IDENTIFIER
  236                   | postfix_expression ARROW IDENTIFIER
  237                   | postfix_expression INCREMENT
  238                   | postfix_expression DECREMENT
  239                   | function_call

  240 primary_expression: IDENTIFIER
  241                   | constant
  242                   | STRING
  243                   | FLOAT
  244                   | LPAREN expression RPAREN
  245                   | LPAREN IDENTIFIER RPAREN

  246 constant: NUMBER
  247         | HEX_NUMBER
  248         | FLOAT
  249         | CHAR
  250         | NULLVAL
  251         | EOFVAL
  252         | TRUE_VAL
  253         | FALSE_VAL

  254 argument_list: ε
  255              | non_empty_argument_list

  256 non_empty_argument_list: expression
  257                        | non_empty_argument_list COMMA expression

  258 if_statement: IF LPAREN op_exp RPAREN statement1 if_state

  259 if_state: ε
  260         | ELSE statement1
  261         | elif1 ELSE statement1
  262         | elif1

  263 elif1: elif statement1
  264      | elif1 elif1

  265 elif: ELSE IF LPAREN op_exp RPAREN

  266 while_statement: WHILE LPAREN op_exp RPAREN statement1

  267 for_statement: FOR LPAREN for_declaration SEMICOLON op_exp SEMICOLON op_exp RPAREN statement1

  268 statement1: LBRACE RBRACE
  269           | statement

  270 op_exp: ε
  271       | expression

  272 for_declaration: ε
  273                | declaration
  274                | expression

  275 semicolons: SEMICOLON
  276           | semicolons SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256) 136
    NUMBER <num> (258) 246
    HEX_NUMBER <num> (259) 247
    FLOAT <fnum> (260) 170 243 248
    IDENTIFIER <str> (261) 15 16 17 18 23 24 25 26 27 28 30 31 34 35 36 37 38 40 43 44 64 65 66 67 117 133 143 157 158 165 231 235 236 240 245
    STRING <str> (262) 171 242
    CHAR <str> (263) 249
    IF (264) 258 265
    ELSE (265) 260 261 265
    WHILE (266) 137 266
    FOR (267) 267
    RETURN (268) 132 133 134
    BREAK (269) 135
    DO (270) 137
    SWITCH (271) 138
    CASE (272) 142 143
    DEFAULT (273) 144
    COLON (274) 56 57 117 142 143 144
    PLUS (275) 212 224
    MINUS (276) 213 225
    MULTIPLY (277) 21 35 36 90 215 228
    DIVIDE (278) 216
    ASSIGN (279) 44 153 177 178 183
    SEMICOLON (280) 24 267 275 276
    COMMA (281) 33 42 53 55 94 150 173 176 178 181 257
    LPAREN (282) 15 16 17 18 23 105 110 111 112 113 133 137 138 159 162 163 219 223 231 234 244 245 258 265 266 267
    RPAREN (283) 15 16 17 18 23 105 110 111 112 113 133 137 138 159 162 163 219 223 231 234 244 245 258 265 266 267
    LBRACE (284) 25 26 27 28 29 30 37 38 39 40 114 138 172 173 268
    RBRACE (285) 25 26 27 28 29 30 37 38 39 40 114 138 172 173 268
    LBRACKET (286) 106 107 108 109 160 161 166 233
    RBRACKET (287) 106 107 108 109 160 161 166 233
    GREATER (288) 205
    LESS (289) 204
    EQUAL (290) 201
    NEQUAL (291) 202
    AND (292) 194
    OR (293) 193
    NOT (294) 226
    AMPERSAND (295) 92 93 198 227
    PIPE (296) 196
    CARET (297) 197
    MODULO (298) 217
    INCREMENT (299) 229 237
    DECREMENT (300) 230 238
    DOT (301) 165 235
    ARROW (302) 236
    TYPE (303) 60 61 62 63 68 69 87
    STRUCT (304) 24 25 26 64
    UNION (305) 27 28 29 30 31 65
    ENUM (306) 37 38 39 40 66
    LONG (307) 68 71
    SHORT (308) 69 72
    UNSIGNED (309) 73
    SIGNED (310) 74
    FILE_TYPE (311) 70
    NULLVAL (312) 250
    EOFVAL (313) 251
    TRUE_VAL (314) 252
    FALSE_VAL (315) 253
    PLUS_ASSIGN (316) 184
    MINUS_ASSIGN (317) 185
    MULTIPLY_ASSIGN (318) 186
    DIVIDE_ASSIGN (319) 187
    MODULO_ASSIGN (320) 188
    GE_OP (321) 207
    LE_OP (322) 206
    SIZEOF (323) 222 223
    LEFT_SHIFT (324) 209
    RIGHT_SHIFT (325) 210
    LEFT_SHIFT_ASSIGN (326) 189
    RIGHT_SHIFT_ASSIGN (327) 190
    LONG_LONG (328) 75
    UNSIGNED_LONG_LONG (329) 76
    SIGNED_LONG_LONG (330) 77
    UNSIGNED_SHORT (331) 78
    SIGNED_SHORT (332) 79
    UNSIGNED_LONG (333) 80
    SIGNED_LONG (334) 81
    UNSIGNED_TYPE (335) 82
    SIGNED_TYPE (336) 83
    LONG_DOUBLE (337) 84
    STATIC (338) 59 85


Nonterminals, with rules where they appear

    $accept (84)
        on left: 0
    program (85)
        on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14
        on right: 0 8 9 10 11 12 13 14
    function_definition (86)
        on left: 15 16 17 18 19 20
        on right: 1 8
    point (87)
        on left: 21 22
        on right: 16 22 152 158
    main_function (88)
        on left: 23
        on right: 2 9
    struct_declaration (89)
        on left: 24 25 26
        on right: 3 10 50 125
    union_declaration (90)
        on left: 27 28 29 30
        on right: 4 11 51 126
    union_variable_declaration (91)
        on left: 31
        on right: 7 14 128
    union_declarator_list (92)
        on left: 32 33
        on right: 31 33
    union_declarator (93)
        on left: 34 35 36
        on right: 32 33
    enum_declaration (94)
        on left: 37 38 39 40
        on right: 5 12 127
    enum_list_nonempty (95)
        on left: 41 42
        on right: 37 38 39 40 42
    enum_item (96)
        on left: 43 44
        on right: 41 42
    struct_member_list (97)
        on left: 45 46
        on right: 25 26 27 28 29 30 46
    struct_member (98)
        on left: 47 48 49 50 51
        on right: 45 46
    bitfield_list (99)
        on left: 52 53 54 55
        on right: 49 53 55
    bitfield_with_decl (100)
        on left: 56
        on right: 52 53
    bitfield_without_decl (101)
        on left: 57
        on right: 54 55
    type (102)
        on left: 58 59 60
        on right: 15 16 17 18 19 20 23 47 48 49 59 60 96 97 98 99 100 148 223
    cast_type (103)
        on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
        on right: 58 85 219
    opt_type (104)
        on left: 86 87
        on right: 73 74
    pointer_opt (105)
        on left: 88 89
        on right: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 155
    pointer (106)
        on left: 90 91
        on right: 62 89 91 101 102
    amper (107)
        on left: 92 93
        on right: 93 99 100 104 156
    parameter_list (108)
        on left: 94 95
        on right: 15 16 17 94 111 113 163
    parameter_declaration (109)
        on left: 96 97 98 99 100
        on right: 94 95
    abstract_declarator (110)
        on left: 101 102 103 104
        on right: 97 100 105
    direct_abstract_declarator (111)
        on left: 105 106 107 108 109 110 111 112 113
        on right: 102 103 104 108 109 112 113
    compound_statement (112)
        on left: 114
        on right: 15 16 19 23 118
    statement_list (113)
        on left: 115 116
        on right: 114 116 144 147
    statement (114)
        on left: 117 118 119 120 121 122 123 124 125 126 127 128 129
        on right: 115 116 117 146 147 269
    statements (115)
        on left: 130 131 132 133 134 135 136
        on right: 124
    do_while_statement (116)
        on left: 137
        on right: 123
    switch_statement (117)
        on left: 138
        on right: 122
    case_list (118)
        on left: 139 140 141
        on right: 138 140
    case_statement (119)
        on left: 142 143 144
        on right: 140 141
    statement_list1 (120)
        on left: 145 146 147
        on right: 142 143
    declaration (121)
        on left: 148
        on right: 6 13 130 273
    init_declarator_list (122)
        on left: 149 150
        on right: 48 148 150
    init_declarator (123)
        on left: 151 152 153
        on right: 149 150
    declarator (124)
        on left: 154 155 156
        on right: 19 20 47 56 96 99 151 152 153 159
    direct_declarator (125)
        on left: 157 158 159 160 161 162 163
        on right: 154 155 156 160 161 162 163
    constant_expression (126)
        on left: 164
        on right: 44 56 57 107 109 161 166
    designator (127)
        on left: 165 166
        on right: 167 168
    designator_list (128)
        on left: 167 168
        on right: 168 177 178
    initializer (129)
        on left: 169 170 171 172 173
        on right: 153 175 176 177 178
    initializer_list (130)
        on left: 174 175 176 177 178
        on right: 172 173 176 178
    expression (131)
        on left: 179 180 181
        on right: 131 132 138 181 233 244 256 257 271 274
    assignment_expression (132)
        on left: 182 183 184 185 186 187 188 189 190
        on right: 169 179 181 183 184 185 186 187 188 189 190
    conditional_expression (133)
        on left: 191
        on right: 164 182
    logical_or_expression (134)
        on left: 192 193 194
        on right: 191 193 194
    inclusive_or_expression (135)
        on left: 195 196 197 198
        on right: 192 196
    exclusive_or_expression (136)
        on left: 199
        on right: 195 196 197
    and_expression (137)
        on left: 200 201 202
        on right: 197 198 199 201 202
    relational_expression (138)
        on left: 203 204 205 206 207
        on right: 200 201 202 204 205 206 207
    shift_expression (139)
        on left: 208 209 210
        on right: 203 204 205 206 207 209 210
    additive_expression (140)
        on left: 211 212 213
        on right: 208 209 210 212 213
    multiplicative_expression (141)
        on left: 214 215 216 217
        on right: 211 212 213 215 216 217
    cast_expression (142)
        on left: 218 219
        on right: 214 215 216 217 219
    unary_expression (143)
        on left: 220 221 222 223
        on right: 183 184 185 186 187 188 189 190 218 221 222
    unary_operator (144)
        on left: 224 225 226 227 228 229 230
        on right: 221
    function_call (145)
        on left: 231
        on right: 239
    postfix_expression (146)
        on left: 232 233 234 235 236 237 238 239
        on right: 220 233 234 235 236 237 238
    primary_expression (147)
        on left: 240 241 242 243 244 245
        on right: 180 232
    constant (148)
        on left: 246 247 248 249 250 251 252 253
        on right: 142 241
    argument_list (149)
        on left: 254 255
        on right: 231 234
    non_empty_argument_list (150)
        on left: 256 257
        on right: 255 257
    if_statement (151)
        on left: 258
        on right: 119
    if_state (152)
        on left: 259 260 261 262
        on right: 258
    elif1 (153)
        on left: 263 264
        on right: 261 262 264
    elif (154)
        on left: 265
        on right: 263
    while_statement (155)
        on left: 266
        on right: 120
    for_statement (156)
        on left: 267
        on right: 121
    statement1 (157)
        on left: 268 269
        on right: 137 258 260 261 263 266 267
    op_exp (158)
        on left: 270 271
        on right: 137 258 265 266 267
    for_declaration (159)
        on left: 272 273 274
        on right: 267
    semicolons (160)
        on left: 275 276
        on right: 6 7 13 14 17 18 20 25 26 27 28 29 30 37 38 39 40 47 48 49 124 128 129 137 276


State 0

    0 $accept: • program $end

    IDENTIFIER          shift, and go to state 1
    TYPE                shift, and go to state 2
    STRUCT              shift, and go to state 3
    UNION               shift, and go to state 4
    ENUM                shift, and go to state 5
    LONG                shift, and go to state 6
    SHORT               shift, and go to state 7
    UNSIGNED            shift, and go to state 8
    SIGNED              shift, and go to state 9
    FILE_TYPE           shift, and go to state 10
    LONG_LONG           shift, and go to state 11
    UNSIGNED_LONG_LONG  shift, and go to state 12
    SIGNED_LONG_LONG    shift, and go to state 13
    UNSIGNED_SHORT      shift, and go to state 14
    SIGNED_SHORT        shift, and go to state 15
    UNSIGNED_LONG       shift, and go to state 16
    SIGNED_LONG         shift, and go to state 17
    UNSIGNED_TYPE       shift, and go to state 18
    SIGNED_TYPE         shift, and go to state 19
    LONG_DOUBLE         shift, and go to state 20
    STATIC              shift, and go to state 21

    program                     go to state 22
    function_definition         go to state 23
    main_function               go to state 24
    struct_declaration          go to state 25
    union_declaration           go to state 26
    union_variable_declaration  go to state 27
    enum_declaration            go to state 28
    type                        go to state 29
    cast_type                   go to state 30
    declaration                 go to state 31


State 1

   67 cast_type: IDENTIFIER • pointer_opt

    MULTIPLY  shift, and go to state 32

    MULTIPLY  [reduce using rule 88 (pointer_opt)]
    $default  reduce using rule 88 (pointer_opt)

    pointer_opt  go to state 33
    pointer      go to state 34


State 2

   61 cast_type: TYPE •
   62          | TYPE • pointer
   63          | TYPE • pointer_opt

    MULTIPLY  shift, and go to state 32

    IDENTIFIER  reduce using rule 61 (cast_type)
    IDENTIFIER  [reduce using rule 88 (pointer_opt)]
    COLON       reduce using rule 61 (cast_type)
    COLON       [reduce using rule 88 (pointer_opt)]
    MULTIPLY    [reduce using rule 61 (cast_type)]
    MULTIPLY    [reduce using rule 88 (pointer_opt)]
    COMMA       reduce using rule 61 (cast_type)
    COMMA       [reduce using rule 88 (pointer_opt)]
    LPAREN      reduce using rule 61 (cast_type)
    LPAREN      [reduce using rule 88 (pointer_opt)]
    RPAREN      reduce using rule 61 (cast_type)
    RPAREN      [reduce using rule 88 (pointer_opt)]
    LBRACKET    reduce using rule 61 (cast_type)
    LBRACKET    [reduce using rule 88 (pointer_opt)]
    AMPERSAND   reduce using rule 61 (cast_type)
    AMPERSAND   [reduce using rule 88 (pointer_opt)]
    TYPE        reduce using rule 61 (cast_type)
    TYPE        [reduce using rule 88 (pointer_opt)]
    $default    reduce using rule 61 (cast_type)

    pointer_opt  go to state 35
    pointer      go to state 36


State 3

   24 struct_declaration: STRUCT • IDENTIFIER SEMICOLON
   25                   | STRUCT • IDENTIFIER LBRACE struct_member_list RBRACE semicolons
   26                   | STRUCT • IDENTIFIER LBRACE struct_member_list RBRACE IDENTIFIER semicolons
   64 cast_type: STRUCT • IDENTIFIER pointer_opt

    IDENTIFIER  shift, and go to state 37


State 4

   27 union_declaration: UNION • IDENTIFIER LBRACE struct_member_list RBRACE semicolons
   28                  | UNION • IDENTIFIER LBRACE struct_member_list RBRACE IDENTIFIER semicolons
   29                  | UNION • LBRACE struct_member_list RBRACE semicolons
   30                  | UNION • LBRACE struct_member_list RBRACE IDENTIFIER semicolons
   31 union_variable_declaration: UNION • IDENTIFIER union_declarator_list
   65 cast_type: UNION • IDENTIFIER pointer_opt

    IDENTIFIER  shift, and go to state 38
    LBRACE      shift, and go to state 39


State 5

   37 enum_declaration: ENUM • IDENTIFIER LBRACE enum_list_nonempty RBRACE semicolons
   38                 | ENUM • IDENTIFIER LBRACE enum_list_nonempty RBRACE IDENTIFIER semicolons
   39                 | ENUM • LBRACE enum_list_nonempty RBRACE semicolons
   40                 | ENUM • LBRACE enum_list_nonempty RBRACE IDENTIFIER semicolons
   66 cast_type: ENUM • IDENTIFIER pointer_opt

    IDENTIFIER  shift, and go to state 40
    LBRACE      shift, and go to state 41


State 6

   68 cast_type: LONG • TYPE pointer_opt
   71          | LONG • pointer_opt

    MULTIPLY  shift, and go to state 32
    TYPE      shift, and go to state 42

    MULTIPLY  [reduce using rule 88 (pointer_opt)]
    TYPE      [reduce using rule 88 (pointer_opt)]
    $default  reduce using rule 88 (pointer_opt)

    pointer_opt  go to state 43
    pointer      go to state 34


State 7

   69 cast_type: SHORT • TYPE pointer_opt
   72          | SHORT • pointer_opt

    MULTIPLY  shift, and go to state 32
    TYPE      shift, and go to state 44

    MULTIPLY  [reduce using rule 88 (pointer_opt)]
    TYPE      [reduce using rule 88 (pointer_opt)]
    $default  reduce using rule 88 (pointer_opt)

    pointer_opt  go to state 45
    pointer      go to state 34


State 8

   73 cast_type: UNSIGNED • opt_type pointer_opt

    TYPE  shift, and go to state 46

    TYPE      [reduce using rule 86 (opt_type)]
    $default  reduce using rule 86 (opt_type)

    opt_type  go to state 47


State 9

   74 cast_type: SIGNED • opt_type pointer_opt

    TYPE  shift, and go to state 46

    TYPE      [reduce using rule 86 (opt_type)]
    $default  reduce using rule 86 (opt_type)

    opt_type  go to state 48


State 10

   70 cast_type: FILE_TYPE • pointer_opt

    MULTIPLY  shift, and go to state 32

    MULTIPLY  [reduce using rule 88 (pointer_opt)]
    $default  reduce using rule 88 (pointer_opt)

    pointer_opt  go to state 49
    pointer      go to state 34


State 11

   75 cast_type: LONG_LONG • pointer_opt

    MULTIPLY  shift, and go to state 32

    MULTIPLY  [reduce using rule 88 (pointer_opt)]
    $default  reduce using rule 88 (pointer_opt)

    pointer_opt  go to state 50
    pointer      go to state 34


State 12

   76 cast_type: UNSIGNED_LONG_LONG • pointer_opt

    MULTIPLY  shift, and go to state 32

    MULTIPLY  [reduce using rule 88 (pointer_opt)]
    $default  reduce using rule 88 (pointer_opt)

    pointer_opt  go to state 51
    pointer      go to state 34


State 13

   77 cast_type: SIGNED_LONG_LONG • pointer_opt

    MULTIPLY  shift, and go to state 32

    MULTIPLY  [reduce using rule 88 (pointer_opt)]
    $default  reduce using rule 88 (pointer_opt)

    pointer_opt  go to state 52
    pointer      go to state 34


State 14

   78 cast_type: UNSIGNED_SHORT • pointer_opt

    MULTIPLY  shift, and go to state 32

    MULTIPLY  [reduce using rule 88 (pointer_opt)]
    $default  reduce using rule 88 (pointer_opt)

    pointer_opt  go to state 53
    pointer      go to state 34


State 15

   79 cast_type: SIGNED_SHORT • pointer_opt

    MULTIPLY  shift, and go to state 32

    MULTIPLY  [reduce using rule 88 (pointer_opt)]
    $default  reduce using rule 88 (pointer_opt)

    pointer_opt  go to state 54
    pointer      go to state 34


State 16

   80 cast_type: UNSIGNED_LONG • pointer_opt

    MULTIPLY  shift, and go to state 32

    MULTIPLY  [reduce using rule 88 (pointer_opt)]
    $default  reduce using rule 88 (pointer_opt)

    pointer_opt  go to state 55
    pointer      go to state 34


State 17

   81 cast_type: SIGNED_LONG • pointer_opt

    MULTIPLY  shift, and go to state 32

    MULTIPLY  [reduce using rule 88 (pointer_opt)]
    $default  reduce using rule 88 (pointer_opt)

    pointer_opt  go to state 56
    pointer      go to state 34


State 18
